--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <span class="text-2xl font-black diamond-text">前十名總計獲得 55 萬鑽石</span>
             </p>
 
-            <a href="https://app.swag.live" id="t-cta" class="cta-btn py-3.5 rounded-2xl text-lg uppercase tracking-widest">
+            <a href="https://creators.swag.live/win1" id="t-cta" class="cta-btn py-3.5 rounded-2xl text-lg uppercase tracking-widest">
                 主播活動詳情
             </a>
         </section>
