--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
 
             <p class="leading-snug">
                 <span id="t-summary-l3-top" class="text-xl font-bold block mb-1">應援最愛主播</span>
-                <span id="t-summary-l3-btm" class="text-lg font-black diamond-text">前十名總計獲得 55 萬鑽石</span>
+                <span id="t-summary-l3-btm" class="text-xl font-bold block">前十名總計獲得 <span class="diamond-text">55 萬</span> 鑽石</span>
             </p>
 
             <!-- 使用附件 smartNavigate 邏輯 -->
-            <button onclick="smartNavigate('https://app.swag.live')" id="t-cta" class="btn-cta py-3.5 rounded-2xl text-lg uppercase tracking-widest">
+            <button onclick="smartNavigate('https://creators.swag.live/win1')" id="t-cta" class="btn-cta py-3.5 rounded-2xl text-lg uppercase tracking-widest">
                 主播活動詳情
             </button>
         </section>
@@ -222,7 +222,7 @@
             tw: {
                 title: "冬季戀歌", date: "01.16 00:00 - 01.20 23:59 (GMT+8)",
                 l1: "送直播間或聊天室任一鑽石<br>「冬季戀歌」系列禮物",
-                l3_top: "應援最愛主播", l3_btm: "前十名總計獲得 55 萬鑽石",
+                l3_top: "應援最愛主播", l3_btm: "前十名總計獲得 <span class='diamond-text'>55 萬</span> 鑽石",
                 cta: "主播活動詳情", my_rank: "個人排行", my_cost: "個人送鑽", lb_title: "禮物總鑽排行榜",
                 th_rank: "排名", th_cost: "送禮總鑽石", th_reward: "獎勵鑽石", rules_label: "活動說明",
                 rules: ["僅限送「冬季戀歌」系列禮物，包含直播間與聊天室。", "資料至少需 5 分鐘更新時間。", "排名鑽石將於活動結束後 5 個工作日內發放。", "最終結果以官方計算為準。"],
@@ -231,7 +231,7 @@
             cn: {
                 title: "冬季恋歌", date: "01.16 00:00 - 01.20 23:59 (GMT+8)",
                 l1: "送直播间或聊天室任一钻石<br>「冬季恋歌」系列礼物",
-                l3_top: "应援最爱主播", l3_btm: "前十名总计获得 55 万钻石",
+                l3_top: "应援最爱主播", l3_btm: "前十名总计获得 <span class='diamond-text'>55 万</span> 钻石",
                 cta: "主播活动详情", my_rank: "个人排行", my_cost: "个人送钻", lb_title: "礼物总钻排行榜",
                 th_rank: "排名", th_cost: "送礼总钻石", th_reward: "奖励钻石", rules_label: "活动说明",
                 rules: ["仅限送「冬季恋歌」系列礼物，包含直播间与聊天室。", "数据至少需 5 分钟更新时间。", "排名钻石将于活动结束后 5 个工作日内发放。", "最终结果以官方计算为准。"],
@@ -240,7 +240,7 @@
             en: {
                 title: "Winter Melody", date: "Jan 16 00:00 - Jan 20 23:59 (GMT+8)",
                 l1: "Send any 'Winter Melody' gifts<br>in live or chat rooms.",
-                l3_top: "Support your favorites", l3_btm: "Top 10 share 550,000 Diamonds",
+                l3_top: "Support your favorites", l3_btm: "Top 10 share <span class='diamond-text'>550,000</span> Diamonds",
                 cta: "Campaign Info", my_rank: "My Rank", my_cost: "My Gifting", lb_title: "Leaderboard",
                 th_rank: "Rank", th_cost: "Diamonds", th_reward: "Rewards", rules_label: "Campaign Info",
                 rules: ["Only 'Winter Melody' gifts count.", "Data updates every 5 minutes.", "Rewards distributed within 5 business days.", "Final count based on official records."],
@@ -249,7 +249,7 @@
             jp: {
                 title: "冬の恋歌", date: "01.16 00:00 - 01.20 23:59 (GMT+8)",
                 l1: "ライブやチャットルームで<br>「冬の恋歌」ギフトを贈ろう",
-                l3_top: "ライバーを応援しよう", l3_btm: "上位10名に合計 55万ダイヤ贈呈",
+                l3_top: "ライバーを応援しよう", l3_btm: "上位10名に合計 <span class='diamond-text'>55萬</span> ダイヤ贈呈",
                 cta: "詳細はこちら", my_rank: "自分の順位", my_cost: "合計ギフト", lb_title: "ランキング",
                 th_rank: "順位", th_cost: "ダイヤ合計", th_reward: "報酬", rules_label: "詳細事項",
                 rules: ["「冬の恋歌」シリーズが対象です。", "データは約5分ごとに更新されます。", "報酬は終了後5営業日以内に配布されます。", "最終結果は公式記録に基づきます。"],
