--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
 
             <p class="leading-snug">
                 <span id="t-summary-l3-top" class="text-xl font-bold block mb-1">應援最愛主播</span>
-                <span id="t-summary-l3-btm" class="text-xl font-bold block">前十名總計獲得 <span class="diamond-text">55 萬</span> 鑽石</span>
+                <span id="t-summary-l3-btm" class="text-xl font-bold block">前十名總計獲得 <span class="diamond-text">55 萬</span> 鑽石
+                </span>
             </p>
 
             <!-- 使用附件 smartNavigate 邏輯 -->
@@ -278,7 +279,7 @@
             document.getElementById('t-date').innerText = lang.date;
             document.getElementById('t-summary-l1').innerHTML = lang.l1;
             document.getElementById('t-summary-l3-top').innerText = lang.l3_top;
-            document.getElementById('t-summary-l3-btm').innerText = lang.l3_btm;
+            document.getElementById('t-summary-l3-btm').innerHTML = lang.l3_btm;
             document.getElementById('t-cta').innerText = lang.cta;
             document.getElementById('t-my-rank-label').innerText = lang.my_rank;
             document.getElementById('t-my-cost-label').innerText = lang.my_cost;
