--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="text-center mb-6">
             <h1 id="t-title" class="main-title mb-1">冬季戀歌</h1>
             <div id="t-date" class="text-base font-bold text-white/60">
-                01.16 00:00 - 01.20 23:59 (GMT+8)
+                1/16 00:00 - 1/20 23:59 (GMT+8)
             </div>
         </div>
 
@@ -221,7 +221,7 @@
 
         const TRANSLATIONS = {
             tw: {
-                title: "冬季戀歌", date: "01.16 00:00 - 01.20 23:59 (GMT+8)",
+                title: "冬季戀歌", date: "1/16 00:00 - 1/20 23:59 (GMT+8)",
                 l1: "送直播間或聊天室任一鑽石<br>「冬季戀歌」系列禮物",
                 l3_top: "應援最愛主播", l3_btm: "前十名總計獲得 <span class='diamond-text'>55 萬</span> 鑽石",
                 cta: "主播活動詳情", my_rank: "個人排行", my_cost: "個人送鑽", lb_title: "禮物總鑽排行榜",
@@ -230,7 +230,7 @@
                 not_in_rank: "未入榜"
             },
             cn: {
-                title: "冬季恋歌", date: "01.16 00:00 - 01.20 23:59 (GMT+8)",
+                title: "冬季恋歌", date: "1/16 00:00 - 1/20 23:59 (GMT+8)",
                 l1: "送直播间或聊天室任一钻石<br>「冬季恋歌」系列礼物",
                 l3_top: "应援最爱主播", l3_btm: "前十名总计获得 <span class='diamond-text'>55 万</span> 钻石",
                 cta: "主播活动详情", my_rank: "个人排行", my_cost: "个人送钻", lb_title: "礼物总钻排行榜",
@@ -248,7 +248,7 @@
                 not_in_rank: "N/A"
             },
             jp: {
-                title: "冬の恋歌", date: "01.16 00:00 - 01.20 23:59 (GMT+8)",
+                title: "冬の恋歌", date: "1/16 00:00 - 1/20 23:59 (GMT+8)",
                 l1: "ライブやチャットルームで<br>「冬の恋歌」ギフトを贈ろう",
                 l3_top: "ライバーを応援しよう", l3_btm: "上位10名に合計 <span class='diamond-text'>55萬</span> ダイヤ贈呈",
                 cta: "詳細はこちら", my_rank: "自分の順位", my_cost: "合計ギフト", lb_title: "ランキング",
